# nefarious-rs

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
config/: ircd.conf
crates/irc-config/: Cargo.toml
crates/irc-config/src/: lib.rs  parser.rs
crates/irc-proto/: Cargo.toml
crates/irc-proto/src/: casefold.rs  codec.rs  command.rs  lib.rs  message.rs
crates/nefarious/: Cargo.toml
crates/nefarious/src/: accounts.rs  capabilities.rs  channel.rs  client.rs  cloaking.rs  connection.rs  dns.rs  dnsbl.rs  geoip.rs  gitsync.rs  gline.rs  ipcheck.rs  jupe.rs  main.rs  numeric.rs  password.rs  sasl.rs  server.rs  shun.rs  ssl.rs  state.rs  tags.rs  zline.rs
crates/nefarious/src/handlers/: channel.rs  check.rs  messaging.rs  mod.rs  mode.rs  oper_ban.rs  query.rs  registration.rs  server_admin.rs  server_query.rs
crates/nefarious/src/s2s/: burst.rs  handlers.rs  link.rs  mod.rs  routing.rs  types.rs
crates/p10-proto/: Cargo.toml
crates/p10-proto/src/: lib.rs  message.rs  numeric.rs  token.rs
docs/: hlc-msgid-format.md  phase-0-foundation.md  phase-1-p10.md  phase-2-ircv3.md  roadmap.md
