[package]
name = "nefarious"
version = "0.1.0"
edition.workspace = true

[dependencies]
irc-proto = { workspace = true }
irc-config = { workspace = true }
p10-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-openssl = { workspace = true }
openssl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
async-trait = "0.1"
base64 = "0.22"
