[package]
name = "nefarious"
version = "0.2.0"
edition.workspace = true

[dependencies]
irc-proto = { workspace = true }
irc-config = { workspace = true }
p10-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-openssl = { workspace = true }
openssl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
async-trait = "0.1"
base64 = "0.22"
arc-swap = { workspace = true }
bcrypt = "0.17"
md-5 = "0.10"
maxminddb = "0.26"
serde = { version = "1", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "ssh"] }
